# mimic-cardio

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: icd_codes.txt  schema.json
assets/prompts/: dev.txt  dev_ecg.txt  dev_ecg_short.txt  dev_json.txt  dev_short.txt
src/: fetch.py  fetch_ecg.py  main.py  pdf.py
src/app/: __init__.py  main.py
src/apps/mimic_cardio/: main.py
src/apps/mimic_stats/: __init__.py  main.py
src/apps/mimic_test/: __init__.py  main.py
