[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "master-thesis"
version = "1.0.0"
description = "Master thesis"
authors = [{ name="Jakub Wierzchowiec", email="wierzchowieckuba@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydicom",
    "matplotlib",
    "openai",
    "scikit-learn",
    "statsmodels",
    "scipy"
]

[project.scripts]
mimic-cardio = "apps.mimic_cardio.main:main"
mimic-stats = "apps.mimic_stats.main:main"
mimic-test="apps.mimic_test.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
